--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     <div class="social">
       <div class="container">
         <main>
-          <img src="assets/images/avatar-jessica.jpeg" alt="" />
+          <img src="assets/images/unnamed.jpg" alt="" />
           <div class="text">
-            <p class="name">jseeica Randall</p>
+            <p class="name">bido amer</p>
             <p class="place">london,united kingdom</p>
             <p class="jop">" font-end developer and avid reader. "</p>
           </div>
